fix: Remove extra padding

--- a/src/renderer/pages/home/ui/home.module.scss
+++ b/src/renderer/pages/home/ui/home.module.scss
@@ -1,7 +1,7 @@
 .home {
     width: 100%;
     height: 100%;
-    padding: 0 40px;
+    padding-left: 40px;
     box-sizing: border-box;
     color: #f4f6fb;
 }
